--- a/AvatarCatan2.2/app/src/main/res/values/strings.xml
+++ b/AvatarCatan2.2/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="title_activity_defensive_team_choice">DefensiveTeamChoiceActivity</string>
     <string name="title_activity_settlement_choice">SettlementChoiceActivity</string>
     <string name="title_activity_battle_ground">BattleGroundActivity</string>
+    <string name="Offensive_Army">Offensive Army</string>
+    <string name="Offensive_army_turn">Offensive army\'s turn</string>
+    <string name="cant_attack_ownTeam">Can\'t attack own team</string>
+    <string name="dead">[DEAD]</string>
 </resources>
