Add attack a basic game can now be played

--- a/AvatarCatan2.2/app/src/main/res/values/strings.xml
+++ b/AvatarCatan2.2/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="Offensive_army_turn">Offensive army\'s turn</string>
     <string name="cant_attack_ownTeam">Can\'t attack own team</string>
     <string name="dead">[DEAD]</string>
+    <string name="title_activity_dick">Dick</string>
 </resources>
